Project bingo {
  database_type: 'PostgreSQL'
  Note: '''
    Dozingo
  '''
}

//// ============================================
//// IDENTITY & AUTH
//// ============================================

TablePartial timestamps {
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  username text [unique]
  email text [unique, not null]
  ~timestamps
}

Table user_authentications {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  provider text [not null]
  provider_user_id text [not null]
  ~timestamps
  indexes {
    (provider, provider_user_id) [unique, name: 'uq_provider_identity']
  }
}

Ref: user_authentications.user_id > users.id [delete: cascade]

//// ============================================
//// BOARDS & RATINGS
//// ============================================

Table lecturers {
  id uuid [pk, default: `gen_random_uuid()`]
  name text [not null]
  slug text [unique, not null, note: 'URL-friendly identifier']
  ~timestamps
}

Table boards {
  id uuid [pk, default: `gen_random_uuid()`]
  title text [not null]
  size integer [not null, default: 5, note: 'size=5 means a 5x5 board']
  author_id uuid [not null]
  lecturer_id uuid
  ~timestamps
  checks {
    `size >= 3 AND size <= 7` [name: 'chk_board_size']
  }
}

Table cells {
  id uuid [pk, default: `gen_random_uuid()`]
  board_id uuid [not null]
  content text [not null]
  ~timestamps
}

Table votes {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  board_id uuid [not null]
  vote_value integer [not null]
  ~timestamps
  indexes {
    (user_id, board_id) [unique, name: 'uq_one_vote_per_user']
  }
  checks {
    `vote_value IN (1, -1)` [name: 'chk_vote_value']
  }
}

Ref: boards.author_id > users.id [delete: cascade]
Ref: boards.lecturer_id > lecturers.id [delete: set null]
Ref: cells.board_id > boards.id [delete: cascade]
Ref: votes.user_id > users.id [delete: cascade]
Ref: votes.board_id > boards.id [delete: cascade]
